crates/sui-adapter-transactional-tests/tests/mvcc/v0/child_of_child.exp
processed 14 tasks

init:
A: object(0,0)

task 1 'publish'. lines 8-69:
Error: warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:10:23
   │
10 │     use std::option::{Self, Option};
   │                       ^^^^ Unnecessary alias 'option' for module 'std::option'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:10:29
   │
10 │     use std::option::{Self, Option};
   │                             ^^^^^^ Unnecessary alias 'Option' for module member 'std::option::Option'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:11:23
   │
11 │     use sui::object::{Self, UID};
   │                       ^^^^ Unnecessary alias 'object' for module 'sui::object'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:11:29
   │
11 │     use sui::object::{Self, UID};
   │                             ^^^ Unnecessary alias 'UID' for module member 'sui::object::UID'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:12:26
   │
12 │     use sui::tx_context::TxContext;
   │                          ^^^^^^^^^ Unnecessary alias 'TxContext' for module member 'sui::tx_context::TxContext'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01003]: invalid modifier
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:14:5
   │
14 │     struct Obj has key, store {
   │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
   │
   = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:25:21
   │
23 │         let parent = Obj { id: object::new(ctx), value: 0 };
   │             ------ To use the variable mutably, it must be declared 'mut', e.g. 'mut parent'
24 │         let child = Obj { id: object::new(ctx), value: 0 };
25 │         ofield::add(&mut parent.id, KEY, child);
   │                     ^^^^^^^^^^^^^^ Invalid mutable borrow of immutable variable 'parent'

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpeU7yNn:26:21
   │
22 │         let grand = Obj { id: object::new(ctx), value: 0 };
   │             ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut grand'
   ·
26 │         ofield::add(&mut grand.id, KEY, parent);
   │                     ^^^^^^^^^^^^^ Invalid mutable borrow of immutable variable 'grand'



task 2 'programmable'. lines 71-73:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 75-75:
Error: task 3, lines 75-75. Unbound fake id 2,2

task 4 'programmable'. lines 77-78:
Error: INVALID TEST. Unknown object, object(2,2)

task 5 'view-object'. lines 80-80:
Error: task 5, lines 80-80. Unbound fake id 2,2

task 6 'programmable'. lines 82-83:
Error: INVALID TEST. Unknown object, object(2,2)

task 7 'view-object'. lines 85-88:
Error: task 7, lines 85-85. Unbound fake id 2,2

task 8 'programmable'. lines 90-91:
Error: INVALID TEST. Unknown object, object(2,2)

task 9 'programmable'. lines 93-94:
Error: INVALID TEST. Unknown object, object(2,2)

task 10 'programmable'. lines 96-100:
Error: INVALID TEST. Unknown object, object(2,2)

task 11 'programmable'. lines 102-103:
Error: INVALID TEST. Unknown object, object(2,2)

task 12 'programmable'. lines 105-106:
Error: INVALID TEST. Unknown object, object(2,2)

task 13 'programmable'. lines 108-109:
Error: INVALID TEST. Unknown object, object(2,2)
